# EventLoop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp
include/: App.hpp  Common.h  Event.h  Event.hpp  EventLoop.h  EventLoop.hpp  EventLoopException.hpp  EventManager.hpp  EventReceiver.hpp  EventSender.hpp
src/: App.cpp  Common.cpp  Event.cpp  EventLoop.cpp  EventManager.cpp  EventReceiver.cpp  EventSender.cpp
tests/: CMakeLists.txt  EventLoopBasicTest.cpp
